--- a/server/package.json
+++ b/server/package.json
@@ -22,5 +22,8 @@
     "mysql2": "^3.16.1",
     "nodemailer": "^7.0.12",
     "zod": "^4.3.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11"
   }
 }
