--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
+    "reacharts": "^0.4.5",
     "react": "^19.2.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.2.0",
+    "react-is": "^19.2.4",
     "react-router": "^7.12.0",
     "react-router-dom": "^7.13.0",
     "recharts": "^3.6.0",
