Modify DB_PASSWORD in server/.env
Updated DB_PASSWORD in the environment file.

--- a/server/.env
+++ b/server/.env
@@ -7,7 +7,7 @@ PORT=4000
 DB_HOST=localhost
 DB_PORT=3306
 DB_USER=root
-DB_PASSWORD=
+DB_PASSWORD=root
 DB_NAME=ods
 
 #PALABRA SECRETA
@@ -25,3 +25,4 @@ MAILER_HOST=smpt.gmail.com
 MAILER_EMAIL=mailPlaceholder
 
 MAILER_PASS=passPlaceholder
+
