--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,6 @@
 #PORT 
 
 PORT=4000
-
 #VARIABLES BASES DE DATOS
 
 DB_HOST=localhost
@@ -22,5 +21,5 @@ FRONT_URL=http://localhost:5173
 MAILER_ACTIVATE=http://localhost:5173/activateUser
 MAILER_RESETPASS=http://localhost:5173/resetPassword
 MAILER_HOST=smpt.gmail.com
-MAILER_EMAIL=EmailDelRemitente
-MAILER_PASS=ContraseñaDeAplicacion
+MAILER_EMAIL=daniel.mailprof@gmail.com
+MAILER_PASS=txxenvsubtorfgnz
