--- a/server/.env
+++ b/server/.env
@@ -22,5 +22,6 @@ FRONT_URL=http://localhost:5173
 MAILER_ACTIVATE=http://localhost:5173/activateUser
 MAILER_RESETPASS=http://localhost:5173/resetPassword
 MAILER_HOST=smpt.gmail.com
-MAILER_EMAIL=EmailDelRemitente
-MAILER_PASS=ContraseñaDeAplicacion
+#MAILER_EMAIL=user35@gmail.com
+MAILER_EMAIL=admin@gmail.com
+MAILER_PASS=iioqraysiiocvpdV?2
